Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-5818

ReactOS Setup can not handle more than 14 partitions on a drive

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Setup
    • None
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      During ReactOS setup the list of existing partitions will appear blank for that drive if there are more than 14 partitions on it.

      To replicate:

      Partition a blank disk using DOS Fdisk, create a primary partition large enough for ReactOS, create an extended partition, and then create 13 or more tiny logical partitions inside the extended partition. (DOS FDisk is capable of creating up to 24 partitions drives C through Z) Optionally, format the drives.

      Then run ReactOS setup on the drive. At the partition screen it will not display any partitions for that drive, and no further operations can be performed on that drive. If this is on the only drive it is not possible to proceed any further.

      This is only a limitation of Setup. If ReactOS is already installed on the drive, it will boot normally and see all of the partitions.

      Attachments

        Activity

          People

            ekohl ekohl
            someguy SomeGuy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: