[USETUP] Allocate a disk layout buffer that is large enough to keep all partitions of the disk.

CORE-5818 resolve

svn path=/trunk/; revision=68122